# QQFlow

./: .gitignore  BUG_TRACKER.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.scss  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  commands.rs  db_scan.rs  export_chat.rs  main.rs  message_parser.rs
src/components/: Sidebar.scss  Sidebar.tsx  TitleBar.scss  TitleBar.tsx
src/lib/: api.ts  types.ts
src/pages/: AnalysisPage.scss  AnalysisPage.tsx  DatabasePage.scss  DatabasePage.tsx  ExportPage.scss  ExportPage.tsx  GroupAnalysisTab.tsx  HomePage.scss  HomePage.tsx  KeyExtractPage.scss  KeyExtractPage.tsx  PrivateAnalysisTab.tsx  SettingsPage.scss  SettingsPage.tsx
src/stores/: appStore.tsx  themeStore.tsx
src/styles/: main.scss
